Fix classes with wrong package declaration. Update gradle wrapper.